Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-513

On closing a connection, ActiveMQ crashes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 3.7.0
    • 3.9.0
    • None
    • None
    • Windows 7 (32 bits) with Visual C++ 2010

    • Patch Available

    Description

      By closing the connection, ActiveMQConnection::close() and AdvisoryConsumer::processDestinationInfo() access/modify in the same time on config.activeTempDestinations. This gives a crash.

      Test case:

      • compile test.cc
      • run the two command lines in parallel
        + test.exe client1
        + test.exe client2

      Proposed fix:
      Dispose the advisory consumer on closing the connection.

      Attachments

        1. changes.patch
          1 kB
          Daniel Laügt
        2. test.cc
          1 kB
          Daniel Laügt

        Activity

          People

            tabish Timothy A. Bish
            dlaugt Daniel Laügt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 24h
                24h
                Remaining:
                Remaining Estimate - 24h
                24h
                Logged:
                Time Spent - Not Specified
                Not Specified