https://issues.apache.org/jira/browse/AMQCPP-513

Apply patch and create an integration test from the provided test app to
prevent this from popping up again.